# ArchonAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NEWFEATURES.md  PENDING.md  README.md  docker-compose.yml  main.py  mcp_config.json  mcp_server.py  pyproject.toml
.claude/agents/: archon-agent-designer.md  archon-engineer.md  archon-rag-engineer.md  archon-research-engineer.md
.claude/hooks/: post-session.md  pre-agent-run.md
.claude/memory/: MEMORY.md  build_phases.md  decisions.md  tech_stack.md
.claude/rules/: agents.md  output.md  python.md  security.md
.claude/skills/: agent.md  cost-check.md  decision.md  phase-update.md  review-agent.md  sprint.md
.github/workflows/: deploy-github-app.yml  publish-cli.yml  publish-vscode.yml
cli-package/: README.md  pyproject.toml
cli-package/src/archon_cli/: __init__.py  client.py  config.py  main.py  sse_display.py
cli-package/tests/: test_cli.py
docs/: ARCHITECTURE.md  PRODUCT_PLAN.md
docs/api/: README.md
docs/architecture/: README.md  adr-001-monorepo.md  adr-002-worker-separation.md  adr-003-pgvector.md  adr-004-rq-queue.md  adr-005-sse.md  adr-006-supervisor-merge.md  adr-007-phase1-rag.md  phase1-architecture.md
docs/development/: contributing.md  env-vars.md  getting-started.md  testing-guide.md
docs/prds/: README.md  prd-01-review.md  prd-02-design.md  prd-03-due-diligence.md  prd-04-migration-planner.md  prd-05-compliance-auditor.md  prd-06-incident-responder.md  prd-07-cost-optimiser.md  prd-08-pr-reviewer.md  prd-09-scaling-advisor.md  prd-10-drift-monitor.md  prd-11-feature-feasibility.md  prd-12-vendor-evaluator.md  prd-13-onboarding-accelerator.md  prd-14-sunset-planner.md
docs/product/: agents.md  getting-started.md  hitl-modes.md  output-guide.md  overview.md
docs/runbooks/: database-migrations.md  incident-response.md  scaling-workers.md
docs/security/: data-handling.md  security-model.md
github-app/: .env.example  Dockerfile  README.md  app-manifest.json  requirements.txt
github-app/src/: app.py  callback.py  (+1 more)
prompts/: ai_architect.md  cloud_architect.md  data_architect.md  integration_architect.md  security_architect.md  software_architect.md  supervisor.md
vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
web/: .env.local.example  .gitignore  next.config.ts  package.json  tailwind.config.ts
(+265 files in other folders)
