[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archon"
version = "0.1.0"
description = "ARCHON — Autonomous AI Architecture Co-Pilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.0.0",
    "clerk-backend-api>=1.0.0",
    "stripe>=10.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
archon = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/archon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
